--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
 		"tslib": "^2.0.0",
 		"typescript": "^4.0.0",
 		"vite": "^2.1.0",
-		"vite-plugin-markdown": "^2.0.2"
+		"vite-plugin-markdown": "^2.0.2",
+		"@sveltejs/adapter-vercel": "next"
 	},
 	"type": "module"
 }
